# sphinxawesome-sampdirective

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: constraints.txt  coverage.yml  lint.yml  release.yml  tests.yml
src/sphinxawesome/sampdirective/: __init__.py
tests/: conftest.py  test_filter.py  test_samplexer.py  test_sphinxawesome_sampdirective.py
tests/test-root/: conf.py  index.rst
