[tool.poetry]
name = "sphinxawesome-sampdirective"
version = "1.0.0"
description = "A Sphinx directive for literal blocks with emphasis"
license = "MIT"
readme = "README.md"
authors = ["Kai Welke <kai687@pm.me>"]
repository = "https://github.com/kai687/sphinxawesome-sampdirective"
classifiers = [
  'Programming Language :: Python',
  'Framework :: Sphinx',
  'Framework :: Sphinx :: Extension',
  'Topic :: Documentation',
  'Topic :: Documentation :: Sphinx',
  'Topic :: Software Development :: Documentation'
]
packages = [
  { include = "sphinxawesome", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.6.1, <4.0.0"
sphinx = ">=2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
pytest-cov = "^2.9"
pre-commit = "^2.5.1"
coverage = {extras = ["toml"], version = "^5.1"}

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["sphinxawesome.sampdirective"]

[tool.covrage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
