[tool.poetry]
name = "sphinxawesome-sampdirective"
version = "1.0.5"
description = "A Sphinx directive for literal blocks with emphasis"
license = "MIT"
readme = "README.md"
authors = ["Kai Welke <kai687@pm.me>"]
repository = "https://github.com/kai687/sphinxawesome-sampdirective"
classifiers = [
  'Programming Language :: Python',
  'Framework :: Sphinx',
  'Framework :: Sphinx :: Extension',
  'Topic :: Documentation',
  'Topic :: Documentation :: Sphinx',
  'Topic :: Software Development :: Documentation'
]
packages = [
  { include = "sphinxawesome", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.6.2, <4.0.0"
sphinx = ">=2.2"
importlib_metadata = {version = ">=1.6.1,<5.0.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.12"
pre-commit = "^2.13.0"
coverage = {extras = ["toml"], version = "^5.5"}
flake8 = "^3.9.2"
flake8-annotations = "^2.6.1"
flake8-black = "^0.2.1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.3.2"
flake8-docstrings = "^1.6.0"
black = "^21.6b0"
mypy = "^0.910"
typeguard = "^2.12.1"
safety = "^1.10.3"
flake8_implicit_str_concat = "^0.2.0"
isort = "^5.9.2"
types-docutils = "^0.1.7"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["sphinxawesome.sampdirective"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.mypy]
files = ["noxfile.py", "src/**/*.py", "tests/**/*.py"]

[[tool.mypy.overrides]]
module = ["pygments.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
