[tool.poetry]
name = "sphinxawesome-sampdirective"
version = "1.0.5"
description = "A Sphinx directive for literal blocks with emphasis"
license = "MIT"
readme = "README.md"
authors = ["Kai Welke <kai687@pm.me>"]
repository = "https://github.com/kai687/sphinxawesome-sampdirective"
classifiers = [
  'Programming Language :: Python',
  'Framework :: Sphinx',
  'Framework :: Sphinx :: Extension',
  'Topic :: Documentation',
  'Topic :: Documentation :: Sphinx',
  'Topic :: Software Development :: Documentation'
]
packages = [
  { include = "sphinxawesome", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
sphinx = ">=2.2"
importlib_metadata = {version = ">=1.6.1,<6.0.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-cov = "^4.0"
pre-commit = "^2.17.0"
coverage = {extras = ["toml"], version = "^6.5"}
flake8 = "^3.9.2"
flake8-annotations = "^2.9.1"
flake8-black = "^0.3.5"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.10.27"
flake8-docstrings = "^1.6.0"
black = "^22.10"
mypy = "^0.991"
typeguard = "^2.13.3"
safety = "^2.3.3"
isort = "^5.10.1"
types-docutils = "^0.19.1"

[tool.poetry.group.dev.dependencies]
flake8-implicit-str-concat = "^0.3.0"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["sphinxawesome.sampdirective"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.mypy]
files = ["noxfile.py", "src/**/*.py", "tests/**/*.py"]

[[tool.mypy.overrides]]
module = ["pygments.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
